# Eonvelope

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  .weblate.ini  AccountDBReader.py  AttachmentModel.py  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  CorrespondentViewSet.py  DBManager.py  DBTest.py  DEVELOPMENT.md  DaemonTest.py  Dockerfile  EMailArchiverDaemon.py  EMailCorrespondentsModel.py  EMailDBFeeder.py  EMailModel.py  ExchangeFetcher.py  ExchangeMailParser.py  ExchangeTest.py  FileManager.py  IMAPFetcher.py  IMAPTest.py  IMAP_Fetcher.py  IMAP_SSL_Fetcher.py  LICENSE  LoggerFactory.py  MailParser.py  POP3Fetcher.py  POP3_SSL_Fetcher.py  POPTest.py  ParsedEMail.py  ParserTest.py  README.md  (+17 more)
.gitea/ISSUE_TEMPLATE/: bugreport.md  missing_accessibility.md  missing_language.md
.gitea/PULL_REQUEST_TEMPLATE/: stop.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bugreport.md  feature_request.md  missing_accessibility.md  missing_language.md
.github/PULL_REQUEST_TEMPLATE/: stop.md
.gitlab/: dependabot.yml
.gitlab/ci/: .gitlab-ci-build.yml  .gitlab-ci-check-version.yml  .gitlab-ci-check.yml  .gitlab-ci-check_and_commit.yml  .gitlab-ci-debug-build.yml  .gitlab-ci-dependabot.yml  .gitlab-ci-fix_and_format.yml  .gitlab-ci-lint.yml  .gitlab-ci-pages.yml  .gitlab-ci-pull_into_master.yml  .gitlab-ci-release.yml  .gitlab-ci-test.yml
.gitlab/issue_templates/: bugreport.md  feature_request.md  missing_accessibility.md  missing_language.md
.gitlab/merge_request_templates/: bugfix.md  feature_implementation.md  improved_docs.md  missing_accessibility.md  missing_language.md
.gitlab/pages/: LICENSE  _redirects  index.html  scripts.js  style.css
Emailkasten/: DBReconnectMiddleware.py  DBTest.py  DaemonTest.py  EMailArchiverDaemon.py  EMailArchiverDaemonRegistry.py  EMailDBFeeder.py  EMailDBFeeding.py  EMailModel.py  EMailViewSet.py  ExchangeFetcher.py  ExchangeMailParser.py  FileManager.py  FileManagment.py  IMAPFetcher.py  IMAPTest.py  IMAP_SSL_Fetcher.py  LoggerFactory.py  MailParser.py  MailParsing.py  MailProcessor.py  POP3Fetcher.py  POP3_SSL_Fetcher.py  Pagination.py  ParsedEMail.py  Serializers.py  __init__.py  apps.py  asgi.py  celery.py  constants.py  emailArchiverDaemon.service  emailDBFeeding.py  fileManagment.py  mailParsing.py  mailProcessing.py  mailRendering.py  mypy.ini  permissions.py  pylintrc  settings.py  (+4 more)
Emailkasten/Fetchers/: ExchangeFetcher.py  IMAPFetcher.py  IMAP_SSL_Fetcher.py  POP3Fetcher.py  POP3_SSL_Fetcher.py  __init__.py
Emailkasten/Filters/: AccountFilter.py  AttachmentFilter.py  AttachmentsFilter.py  CorrespondentFilter.py  DaemonFilter.py  EMailFilter.py  ImageFilter.py  MailboxFilter.py  MailingListFilter.py  __init__.py
Emailkasten/Models/: AccountModel.py  AttachmentModel.py  ConfigurationModel.py  CorrespondentModel.py  DaemonModel.py  EMailCorrespondentsModel.py  EMailModel.py  ImageModel.py  MailboxModel.py  MailingListModel.py  StorageModel.py  UserModel.py  __init__.py
Emailkasten/Serializers/: __init__.py
Emailkasten/ViewSets/: AccountViewSet.py  AttachmentViewSet.py  ConfigurationViewSet.py  CorrespondentViewSet.py  DatabaseStatsView.py  DatabaseStatsViewSet.py  EMailCorrespondentViewSet.py  EMailViewSet.py  LoginOut.py  MailboxViewSet.py  MailingListViewSet.py  UserCreateView.py
Emailkasten/Views/: AccountViewSet.py  AttachmentViewSet.py  ConfigurationViewSet.py  CorrespondentViewSet.py  DaemonViewSet.py  DatabaseStatsView.py  EMailViewSet.py  ImageViewSet.py  LoginOutView.py  MailboxViewSet.py  MailingListViewSet.py  UserCreateView.py  UserViewSet.py  __init__.py
Emailkasten/middleware/: TimezoneMiddleware.py
Emailkasten/migrations/: 0002_initial.py  0003_rename_email_id_attachmentmodel_email_and_more.py  0005_alter_attachmentmodel_file_path_and_more.py  0006_alter_emailmodel_eml_filepath.py  0008_remove_accountmodel_cycle_interval_and_more.py  0009_alter_mailboxmodel_fetching_criterion.py  0012_alter_accountmodel_user_alter_attachmentmodel_email_and_more.py  0013_alter_emailcorrespondentsmodel_correspondent_and_more.py  0023_mailinglistmodel_correspondent_and_more.py  0024_emailmodel_received.py  0026_remove_emailmodel_delivered_to_and_more.py  0028_correspondentmodel_account_and_more.py  0030_alter_correspondentmodel_unique_together_and_more.py  0034_accountmodel_timeout.py  0035_alter_daemonmodel_log_filepath.py  0036_remove_mailboxmodel_fetching_criterion_and_more.py  0037_alter_accountmodel_unique_together_and_more.py
Emailkasten/signals/: __init__.py  delete_AttachmentModel.py  delete_DaemonModel.py  delete_EMailModel.py  delete_ImageModel.py  save_AccountModel.py  save_DaemonModel.py  save_MailboxModel.py
api/: __init__.py  constants.py  urls.py
api/filters/: AccountFilter.py  (+8 more)
core/: EMailArchiverDaemon.py  EMailArchiverDaemonRegistry.py  EmailArchiverDaemon.py  EmailArchiverDaemonRegistry.py  admin.py  apps.py  constants.py  tasks.py
docker/: Dockerfile  Makefile  docker-compose.debug.yml  docker-compose.minimal.yml  docker-compose.slim.yml  docker-compose.yml  entrypoint.sh
docs/: .gitignore  Docu.txt  LICENSE  Makefile  dependencies.txt
project/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
test/: .coveragerc  .gitignore  Makefile  __init__.py  conftest.py  coveragerc  curl.sh  pytest.ini  settings.py  test_AccountModel.py  test_CorrespondentModel.py  test_EMailArchiverDaemon.py  test_EMailArchiverDaemonRegistry.py  test_MailboxModel.py  test_MailingListModel.py  test_fileManagement.py  test_mailParsing.py  test_mailProcessing.py  test_utils.py
tools/: .codespellrc  .hadolint.yaml  Makefile  biome.json  black_config  djlintrc  doc8.ini  mypy.ini  pylintrc_code  pylintrc_docs  pylintrc_extension  pylintrc_src  pylintrc_test  ruff.toml
validation/: .codespellrc  Makefile  black_config  djlintrc  mypy.ini  mypy_extension.ini  pylintrc  pylintrc_code  pylintrc_docs  pylintrc_extension  pylintrc_strict  pylintrc_strict_extension  pylintrc_style  pylintrc_test  ruff.toml
web/: __init__.py  apps.py  urls.py
(+1749 files in other folders)
