[project]
name = "emailkasten"
version = "0.1.0"
description = "A open-source self-hosted mail archive using the django framework."
authors = [
    {name = "David Aderbauer",email = "dave.aderbauer@gmail.com"}
]
license = {text = "AGPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2,<6.0)",
    "django-extensions (>=3.2.3,<4.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "django-health-check (>=3.18.3,<4.0.0)",
    "django-filter (>=25.1,<26.0)",
    "django-dirtyfields (>=1.9.7,<2.0.0)",
    "django-allauth (>=65.7.0,<66.0.0)",
    "django-constance (>=4.3.2,<5.0.0)",
    "dj-rest-auth (>=7.0.1,<8.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "exchangelib (>=5.5.1,<6.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "imgkit (>=1.2.3,<2.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "imap-tools (>=1.10.0,<2.0.0)",
    "mysqlclient (>=2.2.7, <3.0.0)",
    "psutil (>=7.0.0,<8.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.poetry.group.dev]
optional=true

[tool.poetry.group.dev.dependencies]
django-stubs = "^5.1.3"
djangorestframework-stubs = "^3.15.3"
django-filter-stubs = "^0.1.3"
black = "^25.1.0"
ruff = "^0.11.2"
autotyping = "^24.9.0"
mypy = "^1.15.0"
lxml = "^5.3.1"
pylint = "^3.3.6"
pytest = "^8.3.5"
pylint-django = "^2.6.1"
pytest-django = "^4.11.0"
pytest-mock = "^3.14.0"
pytest-mypy = "^1.0.1"
pytest-cov = "^6.1.0"
pytest-html = "^4.1.1"
pyfakefs = "^5.8.0"
factory-boy = "^3.3.3"
model-bakery = "^1.20.4"
pylintfileheader = "^1.0.0"
freezegun = "^1.5.1"

[tool.poetry.group.docs]
optional=true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
sphinxcontrib-napoleon = "^0.7"
sphinxcontrib-apidoc = "^0.5.0"
sphinxcontrib-django = "^2.5"
sphinx-autodoc-typehints = "^3.1.0"
myst-parser = "^4.0.1"
pydeps = "^3.0.1"
pydotplus = "^2.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
