[project]
name = "eonvelope"
version = "0.5.2"
description = "Preserve your emails with this open-source self-hosted email archive."
authors = [
    {name = "David Aderbauer & The Eonvelope Contributors", email = "eonvelope@mailo.com"}
]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE", "docs/LICENSE"]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "django (>=5.2,<6.0)",
    "django-extensions (>=4.1,<5.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "django-health-check (>=3.18.3,<4.0.0)",
    "django-filter (>=25.1,<26.0)",
    "django-dirtyfields (>=1.9.7,<2.0.0)",
    "django-allauth[headless,headless-spec,mfa] (>=65.13.0,<66.0.0)",
    "django-constance (>=4.3.2,<5.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "exchangelib (>=5.5.1,<6.0.0)",
    "imap-tools (>=1.10.0,<2.0.0)",
    "mysqlclient (>=2.2.7, <3.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "django-bootstrap5 (>=26.1,<27.0)",
    "fontawesomefree (>=6.6.0,<7.0.0)",
    "django-crispy-forms (>=2.4,<3.0)",
    "crispy-bootstrap5 (>=2025.4,<2026.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "whitenoise[brotli] (>=6.9.0,<7.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "django-celery-results (>=2.6.0,<3.0.0)",
    "django-celery-beat (>=2.8.1,<3.0.0)",
    "django-robots (>=6.1,<7.0)",
    "vobject (>=0.9.9,<0.10.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "psycopg[binary] (>=3.2.10,<4.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "django-tables2 (>=2.7.5,<3.0.0)",
    "django-debug-toolbar (>=6.1.0,<7.0.0)",
    "django-import-export[all] (>=4.3.13,<5.0.0)",
    "django-schema-viewer (>=0.5.3,<0.6.0)",
    "django-prometheus (>=2.4.1,<3.0.0)",
    "django-pwa (>=2.0.1,<3.0.0)",
    "django-settings-export (>=1.2.1,<2.0.0)",
    "jmapc (>=0.2.23,<0.3.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.14,<3.15"

[tool.poetry.group.dev]
optional=true
include-groups=[
    "lint",
    "test",
    "stubs",
    "docs",
]

[tool.poetry.group.dev.dependencies]
wlc = "*"
pip-licenses = "*"
poethepoet = "*"
pre-commit = "*"

[tool.poetry.group.lint]
optional=true

[tool.poetry.group.lint.dependencies]
black = "*"
ruff = "*"
autotyping = "*"
mypy = "*"
pylint = "*"
pylint-django = "*"
djlint = "*"
codespell = "*"
doc8 = "*"

[tool.poetry.group.test]
optional=true

[tool.poetry.group.test.dependencies]
pytest = "^9.0.0"
pytest-django = "^4.11.0"
pytest-mock = "^3.14.0"
pytest-cov = "^7.0.0"
pytest-html = "^4.1.1"
pyfakefs = "^6.0.0"
factory-boy = "^3.3.3"
model-bakery = "^1.20.4"
freezegun = "^1.5.4"

[tool.poetry.group.stubs]
optional=true

[tool.poetry.group.stubs.dependencies]
django-stubs = "^5.1.3"
djangorestframework-stubs = "^3.15.3"
django-filter-stubs = "^0.1.3"
celery-stubs = "^0.1.3"
types-vobject = "^0.9.9.20250708"
types-django-import-export = "^4.3.0.20250822"

[tool.poetry.group.docs]
optional=true

[tool.poetry.group.docs.dependencies]
sphinx = "^9.1.0"
sphinxcontrib-napoleon = "^0.7"
sphinxcontrib-django = "^2.5"
sphinx-autodoc-typehints = "^3.1.0"
myst-parser = "^5.0.0"
pydeps = "^3.0.1"
pydot = "^4.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
